Remove overflows on html to fix double scrollbars

--- a/public/core/themes/raccoon-twig/assets/styles/general/_main.scss
+++ b/public/core/themes/raccoon-twig/assets/styles/general/_main.scss
@@ -1,6 +1,4 @@
 html {
-    overflow-x: hidden;
-    overflow-y: scroll;
     font-size: 62.5%;
 
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
